manifests/prod/worker-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: mbouzayeni/worker:__TAG__
        resources:
          requests:
            cpu: "200m"
            memory: "20Mi"
      nodeSelector:
        app: first
