manifests/prod/hasher-manifest.yml
kind: Service
apiVersion: v1
metadata:
  name: hasher
  namespace: app
spec:
  selector:
    app: hasher
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hasher-deployment
  namespace: app
  labels:
    app: hasher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hasher
  template:
    metadata:
      labels:
        app: hasher
    spec:
      containers:
      - name: hasher
        image: __GAR_LOCATION__-docker.pkg.dev/__PROJECT_NAME__/__REPOSITORY__/hasher:__TAG__
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "30Mi"
      nodeSelector:
        app: first
