manifests/prod/redis-manifest.yml
kind: Service
apiVersion: v1
metadata:
  name: redis
  namespace: app
spec:
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-server-deployment
  namespace: app
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: __GAR_LOCATION__-docker.pkg.dev/__PROJECT_NAME__/__REPOSITORY__/redis:__TAG__
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: "50m"
            memory: "10Mi"
      nodeSelector:
        app: first
