manifests/prod/rng-manifest.yml
kind: Service
apiVersion: v1
metadata:
  name: rng
  namespace: app
spec:
  selector:
    app: rng
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rng-deployment
  namespace: app
  labels:
    app: rng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rng
  template:
    metadata:
      labels:
        app: rng
    spec:
      containers:
      - name: rng
        image: __GAR_LOCATION__-docker.pkg.dev/__PROJECT_NAME__/__REPOSITORY__/rng:__TAG__
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "30Mi"
      nodeSelector:
        app: first
