manifests/prod/webui-manifest.yml
kind: Service
apiVersion: v1
metadata:
  name: webui-service
spec:
  selector:
    app: webui
  ports:
  - protocol: TCP
    port: 1024
    targetPort: 1024

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webui
  template:
    metadata:
      labels:
        app: webui
    spec:
      containers:
      - name: web
        image: __GAR_LOCATION__-docker.pkg.dev/__PROJECT_NAME__/__REPOSITORY__/webui:__TAG__
        ports:
        - containerPort: 1024
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
      nodeSelector:
        app: second
